samples/_failures_safe/1761168786_98029c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b97290e.c: In function ‘main’:
./samples/SAFE/__tmp_6b97290e.c:154:5: error: expected declaration or statement at end of input
  154 |     } else {
      |     ^
./samples/SAFE/__tmp_6b97290e.c:154:5: error: expected declaration or statement at end of input
